--- a/environment.yml
+++ b/environment.yml
@@ -153,6 +153,7 @@ dependencies:
     - blessings==1.7
     - cachetools==4.2.1
     - chardet==3.0.4
+    - check-wheel-contents==0.2.0
     - cloudpickle==1.6.0
     - colorful==0.5.4
     - dask==2.19.0
@@ -166,6 +167,7 @@ dependencies:
     - grpcio==1.35.0
     - heapdict==1.0.1
     - hiredis==1.1.0
+    - humanfriendly==9.1
     - imagesize==1.2.0
     - ipython==7.10.0
     - jupyter-contrib-core==0.3.3
@@ -173,7 +175,7 @@ dependencies:
     - jupyter-highlight-selected-word==0.2.0
     - jupyter-latex-envs==1.4.6
     - jupyter-nbextensions-configurator==0.4.1
-    - lxml==4.6.2
+    - lxml==4.6.3
     - modin==0.8.3
     - msgpack==1.0.2
     - multidict==5.1.0
@@ -183,6 +185,7 @@ dependencies:
     - opencensus-context==0.1.2
     - pandas==1.1.5
     - pkginfo==1.7.0
+    - property-manager==3.0
     - protobuf==3.15.1
     - psutil==5.8.0
     - py-spy==0.3.4
@@ -206,6 +209,8 @@ dependencies:
     - tblib==1.7.0
     - terminado==0.9.2
     - toolz==0.11.1
+    - verboselogs==1.7
+    - wheel-filename==1.3.0
     - wikidata==0.7.0
     - wikirepo==0.1.0
     - yarl==1.6.3
