--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.7.4
+aiohttp==3.7.3
 aiohttp-cors==0.7.0
 aioredis==1.3.1
 alabaster==0.7.12
@@ -19,6 +19,7 @@ cachetools==4.2.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==3.0.4
+check-wheel-contents==0.2.0
 click==7.1.2
 cloudpickle==1.6.0
 cmarkgfm==0.4.2
@@ -42,6 +43,7 @@ gpustat==0.6.0
 grpcio==1.35.0
 HeapDict==1.0.1
 hiredis==1.1.0
+humanfriendly==9.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==2.0.0
@@ -66,7 +68,7 @@ jupyterlab-widgets==1.0.0
 keyring==22.0.1
 kiwisolver==1.3.1
 lazy-object-proxy==1.5.2
-lxml==4.6.2
+lxml==4.6.3
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 mccabe==0.6.1
@@ -104,6 +106,7 @@ pkginfo==1.7.0
 pluggy==0.13.1
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+property-manager==3.0
 protobuf==3.15.1
 psutil==5.8.0
 ptyprocess==0.7.0
@@ -162,9 +165,11 @@ twine==3.3.0
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+verboselogs==1.7
 wcwidth==0.2.5
 webencodings==0.5.1
 wheel==0.36.2
+wheel-filename==1.3.0
 widgetsnbextension==3.5.1
 Wikidata==0.7.0
 wikirepo==0.1.0
