--- a/environment.yml
+++ b/environment.yml
@@ -144,7 +144,7 @@ dependencies:
   - zlib=1.2.11
   - zstd=1.4.5
   - pip:
-    - aiohttp==3.7.3
+    - aiohttp==3.7.4.post0
     - aiohttp-cors==0.7.0
     - aioredis==1.3.1
     - alabaster==0.7.12
